# qr-craft

./: .gitignore  CODE_REVIEW_QR_GENERATOR.md  Cargo.toml  Dioxus.toml  Dockerfile  README.md  docker-compose.yml  input.css  start.sh  tailwind.config.js
.github/: DOCKER_RELEASE.md
.github/actions/setup-rust/: action.yml
.github/workflows/: ci.yml
assets/: custom.css  tailwind.css  theme.js
src/: config.rs  main.rs  qr_generator.rs  qrcode.rs  saved_qr_list.rs
src/components/: app.rs  header.rs  icons.rs  mod.rs  qr_generator.rs  saved_qr_list.rs
src/models/: logo.rs  mod.rs  qr_code.rs
src/services/: qr_code.rs
src/theme/: mod.rs
src/utils/: format.rs  mod.rs
