[package]
name = "qr-craft"
version = "0.1.0"
authors = ["Benjamin CORBEEL <b.corbeel@bowmedical.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.3", features = ["router", "fullstack"] }
qrcode = "0.14.1"
image = "0.25.1"
fastrand = "2.1.0"
base64 = "0.22.0"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
