[package]
name = "qr-craft"
version = "0.2.0"
authors = ["belugabox"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.3", features = ["router", "fullstack"] }
dioxus-desktop = { version = "0.6.3", optional = true }
qrcode = "0.14.1"
image = "0.25.1"
fastrand = "2.1.0"
base64 = "0.22.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3"
gloo-timers = "0.3"

[dev-dependencies]
futures = "0.3"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop", "dioxus-desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
